--- a/plugin.xml
+++ b/plugin.xml
@@ -18,7 +18,7 @@
  
  <!-- android -->
  <platform name="android">
-  <dependency id="com.google.admobsdk-googleplay" version=">=5.0.89"/>
+    <dependency id="com.google.playservices" version=">=6.1"/>
   <config-file target="res/xml/config.xml" parent="/*">
    <feature name="AdMob">
     <param name="android-package" value="com.agamemnus.cordova.plugin.AdMob"/>
