--- a/plugin.xml
+++ b/plugin.xml
@@ -25,6 +25,10 @@
    </feature>
   </config-file>
   <source-file src="src/android/AdMob.java" target-dir="src/com/agamemnus/cordova/plugin" />
+  <config-file target="AndroidManifest.xml" parent="/manifest">
+   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  </config-file>
  </platform>
  
  <!-- ios -->
